# CLAM

./: .gitignore  CMakeLists.txt  LICENSE  clammake.sh  grun.sh
antlrLab/: CPP14Lexer.java  CPP14Parser.java  CPP14ParserBaseListener.java  CPP14ParserListener.java  main.cpp
cmake/: get_mlir.cmake
grammar/: C.g4  CPPLexer.g4  CPPParser.g4  CPPParserBase.cpp  CPPParserBase.h  transformGrammar.py
src/: CMakeLists.txt  main.cpp
src/frontend/: AST.h
src/parser/ClamParser/: CPPLexer.cpp  CPPLexer.h  CPPParser.cpp  CPPParser.h  CPPParserBase.cpp  CPPParserBaseListener.cpp  CPPParserBaseListener.h  CPPParserBaseVisitor.cpp  CPPParserBaseVisitor.h  CPPParserListener.cpp  CPPParserListener.h  CPPParserVisitor.cpp  CPPParserVisitor.h
tests/: CCompileConfig.json
